answlfl.html 업데이트

--- a/answlfl.html
+++ b/answlfl.html
@@ -78,7 +78,7 @@
         function pickDelivery() {
             const deliveryRestaurants = [
                 "🍖 bbq", "🍗 bhc", "🍗 호식이두마리치킨", "🍖 뭉탱이", "🥩 꾸이한끼", "🍗 꼬꼬야", 
-                "🐷 족발", "🍛 독신남", "🔥 헬로팬닭갈비", "🍗 치킨89"
+                "🐷 족발", "🍛 독신남", "🔥 헬로팬닭갈비", "🍗 치킨89", "🍛 한솥도시락"
             ];
             const randomIndex = Math.floor(Math.random() * deliveryRestaurants.length);
             document.getElementById("restaurant").textContent = deliveryRestaurants[randomIndex];
